# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  new_problem.sh  pyproject.toml  renovate.json  requirements.in  requirements.txt  tox.ini
2020/: mypy.ini  new_problem.sh  tox.ini
problem01/: __init__.py  __main__.py  test_problem01.py
problem02/: __init__.py  __main__.py  test_problem02.py
problem03/: __init__.py
problem04/: __init__.py  __main__.py  test_problem04.py
problem05/: __main__.py  test_problem05.py
problem06/: __init__.py  __main__.py  test_problem06.py
problem07/: __init__.py  __main__.py  test_problem07.py
problem08/: __main__.py  test_problem08.py
problem09/: __main__.py  test_problem09.py
problem10/: __init__.py  __main__.py  test_problem10.py
problem11/: __init__.py  test_problem11.py
problem12/: __init__.py  __main__.py  test_problem12.py
problem13/: __init__.py  __main__.py  test_problem13.py
problem14/: __init__.py  __main__.py  test_problem14.py
problem15/: __init__.py  __main__.py  test_problem15.py
problem16/: __init__.py  __main__.py  test_problem16.py
problem17/: __init__.py  __main__.py  test_problem17.py
problem18/: __init__.py  __main__.py  test_problem18.py
problem19/: __init__.py  __main__.py  test_problem19.py
problem20/: __init__.py  __main__.py  test_problem20.py
problem21/: __init__.py  __main__.py  test_problem21.py
problem22/: __init__.py  __main__.py  test_problem22.py
problem23/: __init__.py  __main__.py  test_problem23.py
problem24/: __init__.py  __main__.py  test_problem24.py
problem25/: __init__.py  (+2 more)
(+271 files in other folders)
