[project]
name = "advent-of-code"
version = "0.1.0"
description = "my Advent of Code solutions"
readme = "README.md"
requires-python = "==3.14.4"
dependencies = []

[dependency-groups]
dev = [
  "mypy==1.20.0",
  "pytest==9.0.3",
  "ruff==0.15.10",
  "tox==4.52.1",
  "tox-uv==1.35.1",
]

[tool.ruff.lint]
# disable pycodestyle ("E") and Pyflakes ("F") for now since we were not
# checking for them before
ignore = ["E", "F"]

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple"
