[project]
name = "advent-of-code"
version = "0.1.0"
description = "my Advent of Code solutions"
readme = "README.md"
requires-python = "==3.14.6"
dependencies = []

[dependency-groups]
dev = [
  "mypy==2.1.0",
  "pytest==9.1.1",
  "ruff==0.15.19",
  "tox==4.56.0",
  "tox-uv==1.35.2",
]

[tool.ruff.lint]
# disable pycodestyle ("E") and Pyflakes ("F") for now since we were not
# checking for them before
ignore = ["E", "F"]

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple"
